--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,13 @@
             <systemPath>${java.home}/lib/ext/jfxrt.jar</systemPath>
             <scope>system</scope>
         </dependency>
-    </dependencies>
+       <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+       <dependency>
+           <groupId>com.google.code.gson</groupId>
+           <artifactId>gson</artifactId>
+           <version>2.8.5</version>
+       </dependency>
+
+   </dependencies>
     
 </project>
