--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,12 @@
            <version>2.8.5</version>
        </dependency>
 
+       <dependency>
+           <groupId>com.victorlaerte</groupId>
+           <artifactId>jfx-asynctask</artifactId>
+           <version>1.0.1</version>
+       </dependency>
+
    </dependencies>
     
 </project>
